# async-doh

./: .gitignore  README.md  pyproject.toml
async_doh/: __main__.py  client.py  patch_resolver.py  resolver_patch.py  server.py  session.py
async_doh/client/: __init__.py  __main__.py  client.py  resolver_patch.py  session.py
async_doh/server/: __init__.py  __main__.py
